<resources>
    <string name="app_name">HelloToast</string>
    <string name="loginTitle">Login</string>
    <string name="usernameLabel">Username :</string>
    <string name="passwordLabel">Password :</string>
    <string name="usernamePlaceholder">Masukkan Username</string>
    <string name="passwordPlaceholder">Masukkan Password</string>
    <string name="buttonLabel">Log In</string>
    <string name="toastSuccess">Login Sukses</string>
    <string name="toastGagal">Login Gagal</string>
</resources>